Clear some warnings